--- a/bms_client/package.json
+++ b/bms_client/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview --host 0.0.0.0 --port $PORT",
+  "start": "vite preview --host 0.0.0.0 --port $PORT"
+},
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@heroicons/react": "^2.2.0",
